--- a/tutorial_easyfrontend/package.json
+++ b/tutorial_easyfrontend/package.json
@@ -8,9 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
+    "@types/axios": "^0.14.0",
+    "@types/cookies": "^0.7.7",
+    "@types/http-proxy": "^1.17.8",
+    "axios": "^0.24.0",
+    "clsx": "^1.1.1",
+    "cookies": "^0.8.0",
+    "http-proxy": "^1.18.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
